--- a/UX Offical/CSS/Payment_pages_stylesheet4.css
+++ b/UX Offical/CSS/Payment_pages_stylesheet4.css
@@ -20,6 +20,7 @@
 
 /* Indication */
 
+/*
 .payment_indicator{
     outline:auto;
     width: 88%;
@@ -173,6 +174,17 @@
     margin-left: 10px;
 }
 
+.room_booked_header{
+    outline: auto;
+    width: 30%;
+    font-size: 60px;
+    margin: 0 auto;
+    margin-top: 100px;
+    text-align: center;
+}
+
+*/
+
 
 
 
@@ -180,29 +192,70 @@
 /* Important information/receipt */
 
 .important_infomation{
-    width: 400px;
-    height: 300px;
-    margin-top: 150px;
-    margin-right: 125px;
+    width: 700px;
+    height: 1000px;
+    margin: 0  auto;
+    margin-top: 100px;
     border: solid 4px black;
     border-radius: 2.5px;
-    float: right;
     background-color: #D3D3D3;
     margin-bottom: 300px;
 }
+
+
 
 h1.information_header{
     width: fit-content;
     margin: 0 auto;
     margin-top: 30px;
     font-family: 'Montserrat';
+    text-align: center;
 }
 
-.information_checkin_date{
+
+.information_testing{
     font-family: 'roboto';
+    margin: 0 auto;
     font-size: 20px;
     margin-top: 15px;
     margin-left: 20px;
+    text-align: center;
+    
+}
+
+.information_credit_card{
+    font-family: 'roboto';
+    margin: 0 auto;
+    font-size: 20px;
+    margin-top: 15px;
+    margin-left: 20px;
+    margin-bottom: 50px;
+    text-align: center;
+    
+}
+
+.line_break_seperating_rooms{
+    width: 60%;
+    height: 3px;
+    margin: 0 auto;
+    background-color: #B28850;
+    border: none;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+
+
+
+
+.information_checkin_date{
+    font-family: 'roboto';
+    margin: 0 auto;
+    font-size: 20px;
+    margin-top: 15px;
+    margin-left: 20px;
+    text-align: center;
+    
 }
 
 .information_checkout_date{
@@ -210,6 +263,7 @@ h1.information_header{
     font-size: 20px;
     margin-top: 15px;
     margin-left: 20px;
+    text-align: center;
 }
 
 .information_days_counter_date{
@@ -217,8 +271,17 @@ h1.information_header{
     font-size: 20px;
     margin-top: 15px;
     margin-left: 20px;
+    text-align: center;
 }
 
+
+.information_days_selected_room{
+    font-family: 'roboto';
+    font-size: 20px;
+    margin-top: 15px;
+    margin-left: 20px;
+    text-align: center;
+}
 
 
 /* Main Container to store all four rooms display */
@@ -231,4 +294,10 @@ h1.information_header{
     margin-bottom: 700px;
     display: inline-block;
     outline: auto;
+}
+
+/* Return to homepage button*/
+
+.return_to_homepage_button{
+
 }
