--- a/UX Offical/CSS/Payment_pages_stylesheet2.css
+++ b/UX Offical/CSS/Payment_pages_stylesheet2.css
@@ -21,20 +21,21 @@
 /* Indication */
 
 .payment_indicator{
-    outline:auto;
+    
     width: 88%;
     height: 120px;
     margin: 0 auto;
     margin-top: 60px;
     display: flex;
+    background-color: #ededed;
+    border: #d7d7d7 5px solid;
 }
-
 
 
 .date_indicator{
     width: 20%;
     height: 120px;
-    outline: red solid 5px;
+    utline: red solid 5px;
     display: inline-block;
     margin-right: 50px;
     flex: 1;
@@ -47,8 +48,9 @@
 .circle_step_counter_date {
     width: 60px;
     height: 60px;
-    line-height: 60px;
+    line-height: 55px;
     border-radius: 50%;
+    border: white 3.5px solid;
     font-size: 30px;
     font-family: 'Roboto';
     color: #fff;
@@ -74,7 +76,7 @@
 .room_indicator{
     width: 20%;
     height: 120px;
-    outline: blue solid 5px;
+    utline: blue solid 5px;
     display: inline-block;
     margin-right: 50px;
     flex: 1;
@@ -83,8 +85,9 @@
 .circle_step_counter_room {
     width: 60px;
     height: 60px;
-    line-height: 60px;
+    line-height: 55px;
     border-radius: 50%;
+    border: white 3.5px solid;
     font-size: 30px;
     font-family: 'Roboto';
     color: #fff;
@@ -110,7 +113,7 @@
 .guestcard_info_indicator{
     width: 20%;
     height: 120px;
-    outline: green solid 5px;
+    utline: green solid 5px;
     display: inline-block;
     margin-right: 50px;
     flex: 1;
@@ -119,8 +122,9 @@
 .circle_step_counter_guest {
     width: 60px;
     height: 60px;
-    line-height: 60px;
+    line-height: 55px;
     border-radius: 50%;
+    border: white 3.5px solid;
     font-size: 30px;
     font-family: 'Roboto';
     color: #fff;
@@ -145,7 +149,7 @@
 .confirmation_indicator{
     width: 20%;
     height: 120px;
-    outline: purple solid 5px;
+    utline: purple solid 5px;
     display: inline-block;
     flex: 1;
 }
@@ -153,8 +157,9 @@
 .circle_step_counter_confirmation {
     width: 60px;
     height: 60px;
-    line-height: 60px;
+    line-height: 55px;
     border-radius: 50%;
+    border: white 3.5px solid;
     font-size: 30px;
     font-family: 'Roboto';
     color: #fff;
@@ -305,7 +310,7 @@ h1.information_header{
 .garden_oasis_room_text_in_button{
     margin-top: 12px;
     color: black;
-    font-size: 23px  ;
+    font-size: 23px;
 }
 
 
