--- a/UX Offical/CSS/Payment_pages_stylesheet3.css
+++ b/UX Offical/CSS/Payment_pages_stylesheet3.css
@@ -241,9 +241,11 @@ h1.information_header{
     height: 1000px;
     margin-left: 90px;
     margin-top: 150px;
-    margin-bottom: 700px;
+    margin-bottom: 300px;
     display: inline-block;
-    outline: auto;
+    utline: auto;
+    background-color: #ededed;
+    border: #d7d7d7 5px solid;
 }
 
 /* Guest Infomation Form */
@@ -251,6 +253,7 @@ h1.information_header{
 .form_guest_info_header{
     text-align: center;
     margin-bottom: 30px;
+    margin-top: 20px;
     font-family: 'montserrat';
 }
 
