--- a/UX Offical/CSS/Footer.css
+++ b/UX Offical/CSS/Footer.css
@@ -122,16 +122,16 @@ footer h1.title{
     margin: 0;
     padding: 0;
     text-decoration: none;
-    background-color: #E6AD78;
+    background-color: #D78030;
 }
 
 
 .contactlinks:hover{
-    background-color: #E6AD78;
+    background-color: #D78030;
 }
 
 .mainsocialmedia:hover{
-    background-color: #E6AD78;
+    background-color: #D78030;
 }
 
 
