--- a/UX Offical/CSS/NewNavbar.css
+++ b/UX Offical/CSS/NewNavbar.css
@@ -11,7 +11,7 @@ nav{
     width: 100%;
     display: relative;
     z-index: 1;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 label.logo{
     color: white;
