--- a/UX Offical/CSS/Garden View Room Style sheet.css
+++ b/UX Offical/CSS/Garden View Room Style sheet.css
@@ -9,7 +9,7 @@
 }
 
 .roomwebpagetitle{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat',Arial, Helvetica, sans-serif;
     font-size: 60px;
     color: #B28850;
     text-align: center;
@@ -30,7 +30,8 @@
 .gardenroomimage{
     width:60%;
     margin: 0 auto;
-    outline: auto;
+    border: #B28850 8px solid;
+    border-radius: 3px;
     display: block;
 }
 
@@ -50,6 +51,62 @@
     margin-bottom: 70px;
     line-height: 22pt;
 }
+
+/* Rooms Important details */
+
+.room_important_details{
+    border: #d7d7d7 5px solid;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    width: 600px;
+    height: 750px;
+    background-color: #ededed;
+}
+
+.garden_room_details_header{
+    utline: auto;
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 30px;
+    text-align: center;
+    font-family: 'Montserrat',Arial, Helvetica, sans-serif;
+    font-size: 35px;
+}
+
+.garden_room_details_header_specific{
+    utline: auto;
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 50px;
+    margin-bottom: 10px;
+    text-align: center;
+    font-family: 'Montserrat',Arial, Helvetica, sans-serif;
+    font-size: 25px;
+}
+
+.room_details_container{
+    width: 90%;
+    height: 300px;
+    utline: auto;
+    margin: 0 auto;
+    margin-top: 30px;
+    
+}
+
+.room_details_text{
+    font-family: 'roboto', Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    utline: auto;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+
+
+
+
+
 
 .gardenroombookbutton{
     text-decoration: none;
