--- a/UX Offical/CSS/RestaurantPages123.css
+++ b/UX Offical/CSS/RestaurantPages123.css
@@ -23,17 +23,16 @@ body{
 }
 
 .Main_container p{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans',sans-serif;
     padding-top: 10px;
     font-size: 20px;
     padding-bottom:  30px;
 }
 
-
 .Main_container a{
     border: black 3px solid;
     padding: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans',sans-serif;
     text-decoration: none;
     background-color: white;
     color: black;
