--- a/UX Offical/CSS/Garden View Room Style sheet.css
+++ b/UX Offical/CSS/Garden View Room Style sheet.css
@@ -9,7 +9,7 @@
 }
 
 .roomwebpagetitle{
-    font-family: 'Montserrat',Arial, Helvetica, sans-serif;
+    font-family: 'Playfair Display', serif;
     font-size: 60px;
     color: #B28850;
     text-align: center;
@@ -43,7 +43,7 @@
 }
 
 .gardenroomtext{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans',sans-serif;
     font-size: 18px;
     text-align: center;
     width: 80%;
@@ -70,7 +70,7 @@
     margin: 0 auto;
     margin-top: 30px;
     text-align: center;
-    font-family: 'Montserrat',Arial, Helvetica, sans-serif;
+    font-family: 'Playfair Display', serif;
     font-size: 35px;
 }
 
@@ -81,7 +81,7 @@
     margin-top: 50px;
     margin-bottom: 10px;
     text-align: center;
-    font-family: 'Montserrat',Arial, Helvetica, sans-serif;
+    font-family: 'Playfair Display', serif;
     font-size: 25px;
 }
 
@@ -95,7 +95,7 @@
 }
 
 .room_details_text{
-    font-family: 'roboto', Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans',sans-serif;
     font-size: 20px;
     utline: auto;
     text-align: center;
@@ -110,7 +110,7 @@
 
 .gardenroombookbutton{
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans',sans-serif;
     font-size: 30px;
     color: black;
     width: fit-content;
