--- a/UX Offical/CSS/Footer.css
+++ b/UX Offical/CSS/Footer.css
@@ -53,7 +53,7 @@ footer h1.title{
     margin-bottom: 0px;
     width: 300px;
     padding-left: 20px;
-    font-family: 'Montserrat',Arial, Helvetica, sans-serif;
+    font-family: 'Playfair Display', serif;
 }
 
 
@@ -74,7 +74,7 @@ footer h1.title{
 .copyrighttext{
     text-align: center;
     font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans',sans-serif;
     margin: 0 auto;
     margin-top: 0px;
     width: 30%;
