--- a/UX Offical/CSS/Resturant.css
+++ b/UX Offical/CSS/Resturant.css
@@ -7,19 +7,15 @@
 
 .Header h1{
   position: absolute;
-  top: 25%;
+  top:30%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
   padding-left: 15px;
   border-left: white 3px solid;
   font-size: 8em;
-  font-family: 'Playfair Display', serif;
 }
 
-p{
-  font-family: 'Open Sans',sans-serif;
-}
 .HeaderIMG{
   width: 100%;
   height: auto;
@@ -29,6 +25,15 @@ p{
   align-content: center;
   text-align: center;
 }
+
+
+
+/* .footer-container{
+  width:100%;
+  height: 400px;
+  background-color: #cc9900;
+} */
+
 
 
 .container_tally{
