--- a/UX Offical/CSS/Facilities.css
+++ b/UX Offical/CSS/Facilities.css
@@ -17,7 +17,7 @@
     
 }
 #desc{
-    background-color:#f4f5ef;
+    background-color:#fffff0;
     width: 100%;
     height: 100%;
 }
@@ -26,10 +26,11 @@
 }
 
 #textpic{
-    padding: 50px;
-    max-width: 450px;
+    padding: 40px;
+    max-width: 500px;
     background-color: rgba(245, 222, 179, 0.6);
     margin: auto;
+    margin-left: 0;
 
     
 }
@@ -64,5 +65,98 @@
 h3{
     margin: 20px;
 }
-@media screen and (max-width: 768px) {
-    textpic{display: block;}
+.button{
+    text-decoration: none;
+    color: black;
+    border: 3px solid black ;
+    padding: 10px;
+    background-color: #fffff0dc;
+    font-weight: bold;
+}
+  
+.button:hover{
+    border: goldenrod solid 3px;
+    background-color: white;
+    color: black;
+}
+.linebreak{
+    width: 150px;
+    margin: 0 auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: block;
+}
+.Header{
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+}
+  
+.Header h1{
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    padding-left: 15px;
+    border-left: white 3px solid;   
+    font-size: 8em;
+}
+  
+.HeaderIMG{
+    width: 100%;
+    height: auto;
+}
+
+@media screen and (max-width: 1024px){
+    .Header h1{
+      font-size: 60px;
+}
+.Title.active{
+    display: none;
+    animation-name: move;
+    animation-delay: 0.5s;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+.IntroPic{
+    height: 400px;
+    width: 90%;
+    max-width: 500px;
+
+    aspect-ratio: 1/1;
+    max-height: 400px;
+}
+
+}
+@media screen and (max-width: 768px){
+.Header h1{
+      font-size: 40px;
+}
+.Title.active{
+      display: none;
+      transition: transform 0.5s ease-in;
+}
+  
+.container_tally{
+      display:block ;
+      justify-content: center;
+      flex-wrap: none;
+      margin: auto;
+}
+    
+.IntroPic{
+      height: 400px;
+      width: 100%;
+      max-width: 500px;
+  
+      aspect-ratio: 1/1;
+      max-height: 400px;
+      margin-left: 0;
+      padding-left: 0;
+}
+.Restaurant_Text_Intro{
+      width: 280px;
+}
+}
+
