--- a/UX Offical/CSS/Facilities.css
+++ b/UX Offical/CSS/Facilities.css
@@ -68,16 +68,17 @@ h3{
 .button{
     text-decoration: none;
     color: black;
-    border: 3px solid black ;
+    border: 1px solid black ;
     padding: 10px;
-    background-color: #fffff0dc;
+    background-color: #eddc989d;
     font-weight: bold;
 }
   
 .button:hover{
-    border: goldenrod solid 3px;
-    background-color: white;
+    border: goldenrod solid 2px;
+    background-color: #f3e6b4;
     color: black;
+    padding: 10px;
 }
 .linebreak{
     width: 150px;
