--- a/UX Offical/CSS/FReservation.css
+++ b/UX Offical/CSS/FReservation.css
@@ -1,14 +1,26 @@
 *{
     margin: 0;
-    
+    padding: 0;   
 }
 form{
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    text-align: center;
-
-    
+        font-family: Arial, Helvetica, sans-serif;
+        margin: auto;
+        height: auto;
+        display: block;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 10px;
+      
+        max-width: 700px;
+        width: 100%;
+        background-color: #fff;
+        padding: 25px 30px;
+        border-radius: 5px;
+        box-shadow: 0 5px 10px rgba(0,0,0,0.15);
+        margin-top: 50px;
+        margin-bottom: 50px;
+        
 }
 input[type="submit"]{
     clear: both;
