--- a/UX Offical/CSS/Facilities.css
+++ b/UX Offical/CSS/Facilities.css
@@ -67,7 +67,7 @@ h3{
     color: black;
     border: 1px solid black ;
     padding: 10px;
-    background-color: #eddc989d;
+    background-color: lightgoldenrodyellow;
     font-weight: bold;
 }
 
@@ -93,7 +93,7 @@ h3{
   
 .Header h1{
     position: absolute;
-    top: 25%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
