--- a/UX Offical/CSS/homepage.css
+++ b/UX Offical/CSS/homepage.css
@@ -113,7 +113,7 @@
      
     }
     .textInPicture{
-        transform: translateX(-50px);
+       margin-left: -70px;
         
     }
     .textInPicture span{
