--- a/UX Offical/CSS/Footer.css
+++ b/UX Offical/CSS/Footer.css
@@ -147,7 +147,7 @@ footer h1.title{
     font-size: 20px;
     margin-left: 25px;
     margin-top: 10px;
-    font-family: 'Montserrat',Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans',sans-serif;
 }
 
 
