--- a/UX Offical/CSS/aboutus.css
+++ b/UX Offical/CSS/aboutus.css
@@ -1,3 +1,7 @@
+.homebutton:hover{
+  cursor: pointer;
+}
+
 .Header{
   width: 100%;
   height: auto;
@@ -94,6 +98,44 @@
   padding-bottom: 10px;
 }
 
+.gapline2{
+  border: none;
+  border-top: 1px solid #ccc;
+  width: auto;
+  max-width: 75%;
+  margin: auto;
+  padding-bottom: 7vh;
+}
+
 .missionary .ourmission{
   font-size: 60px;
+}
+
+.main{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 10%;
+  padding-right: 10%;
+
+}
+
+.main .para_1{
+  margin: 10px;
+  padding: 10px;
+}
+
+.main .divider{
+  border: none;
+  border-top: 1px solid #ccc;
+  width: auto;
+  max-width: 90%;
+  margin: auto;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.main h3{
+  padding-bottom: 5px;
 }
