--- a/UX Offical/CSS/FReservation.css
+++ b/UX Offical/CSS/FReservation.css
@@ -25,8 +25,16 @@ form{
 input[type="submit"]{
     clear: both;
     text-align: center;
-    width: 10%;
-    height: 2em;
+    width: 30%;
+    height: 4em;
     margin: auto;
     border-radius: 2px;
+    
 }
+.butsubmit:hover{
+    transform: scale(0.99);
+    background-color: lightgreen;
+    border: solid greenyellow 3px;
+    color: black;
+  
+  }
