--- a/UX Offical/CSS/FReservation.css
+++ b/UX Offical/CSS/FReservation.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
-    padding: 0;   
+    padding: 0; 
+    box-sizing: border-box;  
 }
 form{
         font-family: Arial, Helvetica, sans-serif;
@@ -16,7 +17,6 @@ form{
         width: 100%;
         background-color: #fff;
         padding: 25px 30px;
-        border-radius: 5px;
         box-shadow: 0 5px 10px rgba(0,0,0,0.15);
         margin-top: 50px;
         margin-bottom: 50px;
