--- a/UX Offical/CSS/FReservation.css
+++ b/UX Offical/CSS/FReservation.css
@@ -3,38 +3,90 @@
     padding: 0; 
     box-sizing: border-box;  
 }
-form{
-        font-family: Arial, Helvetica, sans-serif;
-        margin: auto;
-        height: auto;
-        display: block;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        padding: 10px;
-      
-        max-width: 700px;
-        width: 100%;
-        background-color: #fff;
-        padding: 25px 30px;
-        box-shadow: 0 5px 10px rgba(0,0,0,0.15);
-        margin-top: 50px;
-        margin-bottom: 50px;
-        
+body{
+    background: #fff2d7;
+    padding: 0 10px;
 }
-input[type="submit"]{
-    clear: both;
+.boxthing{
+    max-width: 500px;
+    width: 100%;
+    background: #fff;
+    margin: 20px auto;
+    padding: 30px;
+    box-shadow: 1px 5px 10px rgba(0,0,0,0.15);
+}
+.boxthing .title{
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 25px;
+    color: goldenrod;
+    text-transform: uppercase;
     text-align: center;
-    width: 30%;
-    height: 4em;
-    margin: auto;
-    border-radius: 2px;
+}
+.boxthing .form{
+    width: 100%;
+}
+.boxthing .form .input_field{
+    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+}
+.boxthing .form .input_field label{
+    width: 200px;
+    color: #757575;
+    margin-right: 10px;
+    font-size: 14px;
+}
+.boxthing .form .input_field input{
+    width: 100%;
+    outline: none;
+    border: 1px solid#d5dbd9;
+    font-size: 15px;
+    padding: 8px 10px;
+    border-radius: 3px;
+    transition: all 0.3s ease;
+}
+.boxthing .form .input_field .option_select {
+    position: relative;
+    width: 100%;
+    height: 37px;
     
 }
-.butsubmit:hover{
-    transform: scale(0.99);
-    background-color: lightgreen;
-    border: solid greenyellow 3px;
-    color: black;
-  
-  }
+.boxthing .form .input_field .option_select select{
+    -webkit-appearance: none;
+    appearance: none;
+    border: 1px solid #d5dbd9;
+    width: 100%;
+    height: 100%;
+    padding: 8px 10px;
+    border-radius: 3px;
+}
+.boxthing .form .input_field .option_select:before{
+    content: '';
+    position: absolute;
+    top: 15px;
+    right: 10px;
+    border:8px solid;
+    border-color: burlywood transparent transparent transparent;
+    pointer-events: none;
+}
+.boxthing .form .input_field .input:focus{
+    border:1px solid #fec107
+}
+.boxthing .form .input_field .btn{
+    width: 100%;
+    padding: 8px 10px;
+    font-size: 15px;
+    border: 0;
+    background:goldenrod ;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 3px;
+    outline: none;
+}
+.boxthing .form .input_field:last-child{
+    margin-bottom: 0;
+}
+.boxthing .form .input_field .btn:hover{
+    background: #ffd658;
+}
