--- a/UX Offical/CSS/Resturant.css
+++ b/UX Offical/CSS/Resturant.css
@@ -17,6 +17,10 @@
   font-size: 6em;
 }
 
+.Title{
+  font-family: 'Playfair Display', serif;
+}
+
 .HeaderIMG{
   width: 100%;
   height: auto;
@@ -28,14 +32,10 @@
   background-color: white;
 }
 
-
-
-/* .footer-container{
-  width:100%;
-  height: 400px;
-  background-color: #cc9900;
-} */
-
+.Container_ALL p{
+  font-size: 20px;
+  font-family: 'Open Sans',sans-serif;
+}
 
 
 .container_tally{
@@ -99,6 +99,7 @@
   font-weight: bold;
 }
 
+
 .book_button:hover{
   border: goldenrod solid 3px;
   background-color: white;
@@ -110,7 +111,7 @@
   width: 100%;
   height: auto;
   padding-top: 20px;
-  border-bottom: solid black 3px ;
+  border-bottom: solid gray 1px ;
 }
 
 .IntroPic{
@@ -131,7 +132,7 @@
   padding-top:30px;
   width: 500px;
   margin:auto ;
-  border-bottom: 4px solid black;
+  border-bottom: 3px solid grey;
 }
 
 .Dining_Description{
@@ -144,6 +145,8 @@
   text-align: center;
   font-size: 20px;
   min-height: 400px;
+  font-size: 20px;
+  font-family: 'Open Sans',sans-serif;
 }
 
 .menu_container{
