--- a/UX Offical/CSS/aboutus.css
+++ b/UX Offical/CSS/aboutus.css
@@ -149,8 +149,18 @@
   padding-bottom: 5px;
 }
 
+.container2{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-
+.submain{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  padding-left: 10%;
+  padding-right: 10%;
+  width: fit-content;
+}
 
 
 /* Buttons */
