--- a/UX Offical/CSS/aboutus.css
+++ b/UX Offical/CSS/aboutus.css
@@ -152,17 +152,21 @@
 .container2{
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center;  
 }
 
 .submain{
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: center;
+  font-family: playfair;
+  font-weight: 500;
   padding-left: 10%;
   padding-right: 10%;
   width: fit-content;
 }
 
-
+.stmain{
+  font-size: 3em;
+}
 /* Buttons */
 
 .homebutton:hover{
