--- a/UX Offical/CSS/RestaurantFormResult.css
+++ b/UX Offical/CSS/RestaurantFormResult.css
@@ -15,3 +15,19 @@
     font-size: 20px;
     text-align: center;
 }
+
+.goHome{
+    color: black;
+    text-decoration: none;
+    font-size: 20px;
+    font-family: 'Open Sans',sans-serif;
+    border: black 3px solid;
+    padding: 10px;
+    margin-left: 20px;
+    margin-right:20px; 
+}
+
+.goHome:hover{
+    color: goldenrod;
+    border: goldenrod 3px solid;
+}
