--- a/UX Offical/CSS/faq.css
+++ b/UX Offical/CSS/faq.css
@@ -1,18 +1,74 @@
 /* Content */
 
-.container {
-    margin: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 16px;
-}
+  form {
+      margin-top: 50px;
+      border-width: 1px;
+      border-color: #333;
+      border-style: solid;
+      padding: 20px;
+      height: auto;
+      width: 100%;
+    }
+    
+    label {
+      display: block;
+      margin-bottom: 10px;
+    }
+    
+    input,
+    select {
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+      margin-bottom: 20px;
+      width: 50%;
+    }
+    
+  .main {
+      text-align:justify;
+      padding: 10%;
+      text-align: center;
+      height: auto;
+      width: auto;
+  }
 
-strong {
-    font-family: playfair;
+  .main label {
+      font-size: 20PX;
+  }
+  
+  .main form textarea {
     font-size: 20px;
-    text-decoration: underline;
-    padding-top: 10px;
-    margin-bottom: 10px;
-}
+  }
+
+  .main form placeholder {
+    text-align: center;
+
+  }
+
+/* Buttons */
+
+.homebutton:hover{
+    cursor: pointer;
+  }
+  
+  .roombutton:hover{
+    border: #B28850 solid 2px;
+    color: #B28850;
+  }
+  .roombutton{
+    border: black solid 2px;
+    border-radius: 3px;
+    padding: 10px 20px;
+    text-decoration: none; 
+    font-size: 1.5em;
+    color: black;
+    display: block;
+    text-align: center;
+    width: 180px;
+    margin: 0 auto;
+    margin-top: 15px;
+    cursor: pointer;
+    transition: all 0.2s ease 0s;
+    font-family: 'Open Sans',sans-serif;
+  }
