--- a/UX Offical/CSS/faq.css
+++ b/UX Offical/CSS/faq.css
@@ -1,20 +1,24 @@
 /* Content */
 
   form {
-      margin-top: 50px;
+      display: flex;
+      flex-direction: column;
+      margin: auto;
+      align-items: center;
       border-width: 1px;
       border-color: #333;
+      background-color: rgba(255, 232, 162, 0.694);
       border-style: solid;
-      padding: 20px;
-      height: auto;
-      width: 100%;
+      border-radius: 5px;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
     
     label {
       display: block;
       margin-bottom: 10px;
     }
-    
+
+
     input,
     select {
       padding: 10px;
@@ -26,11 +30,8 @@
     }
     
   .main {
-      text-align:justify;
-      padding: 10%;
-      text-align: center;
-      height: auto;
-      width: auto;
+    margin: 10%;
+    height: auto;
   }
 
   .main label {
@@ -38,12 +39,17 @@
   }
   
   .main form textarea {
+    
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 10px;
     font-size: 20px;
+    resize: none;
   }
 
-  .main form placeholder {
-    text-align: center;
-
+  .main form {
+    flex: 1;
+    width: 75%;
+    max-width: 800px;
   }
 
 /* Buttons */
@@ -57,6 +63,7 @@
     color: #B28850;
   }
   .roombutton{
+    margin-bottom: 3%;
     border: black solid 2px;
     border-radius: 3px;
     padding: 10px 20px;
@@ -66,9 +73,17 @@
     display: block;
     text-align: center;
     width: 180px;
-    margin: 0 auto;
-    margin-top: 15px;
     cursor: pointer;
     transition: all 0.2s ease 0s;
     font-family: 'Open Sans',sans-serif;
+    background: #cccccc00;
+  }
+
+  .gapline2{
+    border: none;
+    border-top: 1px solid #000000;
+    width: auto;
+    max-width: 75%;
+    margin: auto;
+    padding-bottom: 7vh;
   }
